--- a/app/Resources/views/main/home.html.twig
+++ b/app/Resources/views/main/home.html.twig
@@ -27,13 +27,12 @@
                 <h2>3 étapes</h2>
                 <span>Pour bien commencer votre aventure !</span>
             </div>
-            <div class="media d-flex align-items-center">
-                <img class="d-flex mr-3" src="{{ asset('bundles/app/img/laptop.svg') }}">
-                <div class="media-body">
-                    <h3 class="mt-0">CRÉER UN COMPTE NAO</h3>
-                    <p>Inscrivez-vous sur notre site, connectez-vous et profitez de l'ensemble des fonctionnalités proposées
-                        par
-                        l'association Nos Amis Les Animaux</p>
+
+            <div class="row media align-items-center justify-content-center">
+                <img class="col-12 col-md-4" src="{{ asset('bundles/app/img/laptop.svg') }}">
+                <div class="media-body col-12 col-md-8">
+                    <h3 class="mt-3 mt-md-0 text-center text-md-left">CRÉER UN COMPTE NAO</h3>
+                    <p class="text-justify">Inscrivez-vous sur notre site, connectez-vous et profitez de l'ensemble des fonctionnalités proposées par l'association Nos Amis Les Animaux ! L'aventure comme ici et elle n'attend que vous !</p>
                 </div>
             </div>
 
@@ -41,28 +40,23 @@
                 <img class="col-sm-8 d-none d-sm-block" src="{{ asset('bundles/app/img/home/path-1.svg') }}" alt="chemin" style="width: 100%">
             </div>
 
-            <div class="media d-flex align-items-center">
-                <div class="media-body">
-                    <h3 class="mt-0">OBSERVEZ AUTOUR DE VOUS</h3>
-                    <p>Utilisez l'application pour visualiser les oiseaux qui ont été observés autour de vous et tenter à
-                        votre
-                        tour de les retrouver!<br>
-                        Contemplez également les photos des autres utilisateurs ! </p>
+            <div class="row media align-items-center justify-content-center">
+                <img class="col-12 col-md-4 order-sm-2" src="{{ asset('bundles/app/img/boussole-camera.svg') }}">
+                <div class="media-body col-12 col-md-8 order-sm-1">
+                    <h3 class="mt-3 mt-md-0 text-center text-md-left">OBSERVEZ AUTOUR DE VOUS</h3>
+                    <p class="text-justify">Utilisez l'application pour visualiser les oiseaux qui ont été observés autour de vous et tenter à votre tour de les retrouver ! Contemplez également les photos des autres utilisateurs et votez pour celles qui vous plaisent !</p>
                 </div>
-                <img class="d-flex mr-3" src="{{ asset('bundles/app/img/boussole-camera.svg') }}">
             </div>
             
             <div class="row justify-content-center">
                 <img class="col-sm-8 d-none d-sm-block" src="{{ asset('bundles/app/img/home/path-2.svg') }}" alt="chemin" style="width: 100%">
             </div>
 
-            <div class="media d-flex align-items-center">
-                <img class="d-flex mr-3" src="{{ asset('bundles/app/img/notebooks.svg') }}">
-                <div class="media-body">
-                    <h3 class="mt-0">PARTAGEZ VOTRE EXPÉRIENCE</h3>
-                    <p>Vous venez de prendre en photo un oiseau magnifique ? Partagez votre chez-d'oeuvre en saisissant
-                        votre observation depuis votre smartphone ou depuis chez vous et en permettant ainsi à la communauté
-                        d'en profiter !</p>
+            <div class="row media align-items-center justify-content-center">
+                <img class="col-12 col-md-4" src="{{ asset('bundles/app/img/notebooks.svg') }}">
+                <div class="media-body col-12 col-md-8">
+                    <h3 class="mt-3 mt-md-0 text-center text-md-left">PARTAGEZ VOTRE EXPÉRIENCE</h3>
+                    <p class="text-justify">Vous venez de prendre en photo un oiseau magnifique ? Partagez votre chez-d'oeuvre en saisissant votre observation depuis votre smartphone ou depuis chez vous et en permettant ainsi à la communauté d'en profiter !</p>
                 </div>
             </div>
             <div class="container text-center mt-3">
@@ -82,14 +76,14 @@
                 </div>
             </div>
             <div class="row align-items-center justify-content-around">
-                <div class="col-12 col-lg-3 ml-auto">
+                <div class="col-12 col-md-3 ml-auto text-center">
                     <h3>L'OISEAU, UNE IDÉE DANS L'AIR</h3>
                     <p class="text-justify">Depuis une dizaine d’années la recherche a pu constater le fort impact de l’homme sur la vie animale, en particulier sur les oiseaux, pour qui la réduction de l’environnement naturel est fatale.</p>
                 </div>
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <img src="{{ asset('bundles/app/img/protected_bird.png') }}" alt="hiboux_trop_choux" id="hiboux_trop_choux">
                 </div>
-                <div class="col-12 col-lg-3 mr-auto">
+                <div class="col-12 col-md-3 mr-auto mt-3 lt-md-0 text-center">
                     <h3>SOUTENEZ NOUS EN VOUS DIVERTISSANT</h3>
                     <p class="text-justify">Participez à un programme de recherche visant à étudier les effets du climat, de l’urbanisation et de l’agriculture sur la biodiversité gràace à vos observations lors de vos balades partout en France !</p>
                 </div>
