--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -12,8 +12,8 @@
 
 {% block body %}
     <div class="container-fluid heading-page">
-        <h1 class="text-center">CONTACT</h1>
-        <p class="text-center">Accueil >> Contact</p>
+        <h1 class="text-center">Connexion</h1>
+        <p class="text-center">Accueil >> Connexion</p>
     </div>
     <img src="{{ asset('bundles/app/img/template/wave-driedwood.svg') }}" alt="vague" style="width: 100%">
 
