--- a/app/Resources/views/main/home.html.twig
+++ b/app/Resources/views/main/home.html.twig
@@ -37,7 +37,7 @@
             </div>
 
             <div class="row justify-content-center">
-                <img class="col-sm-8 d-none d-sm-block" src="{{ asset('bundles/app/img/home/path-1.svg') }}" alt="chemin" style="width: 100%">
+                <img class="col-sm-8 d-none d-sm-block" src="{{ asset('bundles/app/img/home/path-1.svg') }}" alt="chemin">
             </div>
 
             <div class="row media align-items-center justify-content-center">
@@ -49,7 +49,7 @@
             </div>
             
             <div class="row justify-content-center">
-                <img class="col-sm-8 d-none d-sm-block" src="{{ asset('bundles/app/img/home/path-2.svg') }}" alt="chemin" style="width: 100%">
+                <img class="col-sm-8 d-none d-sm-block" src="{{ asset('bundles/app/img/home/path-2.svg') }}" alt="chemin">
             </div>
 
             <div class="row media align-items-center justify-content-center">
