--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -47,8 +47,8 @@
                 {{ form_row(form._password) }}
 
                 <div class="row text-center">
-                    <a class="col-12 col-md-6 mb-4" data-toggle="modal" data-target="#forgetPassModal">Se souvenir de moi</a>
-                    <a class="col-12 col-md-6 mb-4" data-toggle="modal" data-target="#forgetPassModal">Mot de passe oublié</a>
+                    <p class="col-12 col-md-6 mb-4" data-toggle="modal" data-target="#forgetPassModal">Se souvenir de moi</p>
+                    <a class="col-12 col-md-6 mb-4" data-toggle="modal" data-target="#forgetPassModal" href="#">Mot de passe oublié</a>
                 </div>
 
                 <div class="text-center">
@@ -61,7 +61,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">J'ai oublié mon mot de pass</h5>
+                            <h5 class="modal-title">J'ai oublié mon mot de passe</h5>
                             <button class="close" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body">
