--- a/app/Resources/views/main/actualites.html.twig
+++ b/app/Resources/views/main/actualites.html.twig
@@ -13,14 +13,14 @@
   <img src="{{ asset('bundles/app/img/template/wave-driedwood.svg') }}" alt="vague" style="width: 100%">
 
   <section class="mt-5">
-    <div class="container">
+    <div class="container-fluid">
       <div class="heading">
           <h2>Quoi de neuf ?</h2>
           <span>Des actualités en lien avec la recherche et l'observation de vos animaux préférés</span>
       </div>
-       <div class="row justify-content-around">
+       <div class="row justify-content-center">
           {% for actualite in actualites %}
-              <div class="card p-0 mb-5" style="width: 20rem;">
+              <div class="card p-0" style="width: 30rem;">
                 <div class="mb-4">
                   <img class="card-img-top" src="{{ asset('bundles/app/img/'~ actualite.actualiteImage) }}" alt="image_actualite" >
                 </div>
