--- a/src/AppBundle/Resources/public/css/actualite.css
+++ b/src/AppBundle/Resources/public/css/actualite.css
@@ -9,10 +9,6 @@
     height: 40px;
 }
 
-.imgActualite {
-    border-radius: 25px;
-}
-
 .comments {
     margin-top: 20px;
     height: 200px;
@@ -21,10 +17,23 @@
     border-radius: 25px;
 }
 
-.form-control {
-    border: none;
-}
-
 .social-comment {
     color: #6d49d1;
+}
+
+.comm-display {
+    border-radius: 25px !important;
+    background: #FFFFFF;
+    border: 2px solid #DED5CD;
+    margin-bottom: 0;
+    height: 200px;
+    max-height: 350px;
+    overflow: scroll;
+}
+.comm {
+    min-height: 50px;
+}
+.comm span {
+    color: #87888C ;
+    font-size: 12px;
 }
