--- a/app/Resources/views/main/actualite.html.twig
+++ b/app/Resources/views/main/actualite.html.twig
@@ -12,7 +12,6 @@
     <img src="{{ asset('bundles/app/img/template/wave-driedwood.svg') }}" alt="vague" style="width: 100%">
 
 
-
     <section class="my-5">
         <div class="container">
             {#----------------#}
@@ -35,12 +34,12 @@
         </div>
     </section>
 
-
     {#-------------------#}
     {#PARTIE COMMENTAIRES#}
     {#-------------------#}
     <section id="commentSection">
         <div class="container">
+
             <div class="row flex-column comm-display flex-nowrap p-0">
                 {% for comment in comments %}
                     <div class="row media align-items-center justify-content-center p-0 mx-3 my-2 comm">
@@ -58,20 +57,19 @@
                         </div>
                     </div>
                 {% endfor %}
-
             </div>
 
         {#-------------------#}
         {#FORMULAIRE COMMENT#}
         {#-------------------#}
             <div class="row mt-5 align-items-center">
-                <div class="col-12 col-md-9" id="addComment" >
+                <div class="col-12 col-lg-9" id="addComment" >
                     {% include 'form/commentForm.html.twig' %}
                 </div>
-                <div class="col-12 col-md-3 social-comment d-flex justify-content-end">
-                    <i class="fa fa-facebook-official fa-3x mx-2" aria-hidden="true"></i>
-                    <i class="fa fa-instagram fa-3x mx-2" aria-hidden="true"></i>
-                    <i class="fa fa-twitter fa-3x mx-2" aria-hidden="true"></i>
+                <div class="col-12 col-lg-3 mt-5 mt-lg-0 social-comment d-flex justify-content-center justify-content-lg-end">
+                    <i class="fa fa-facebook-official fa-3x ml-4" aria-hidden="true"></i>
+                    <i class="fa fa-instagram fa-3x ml-4" aria-hidden="true"></i>
+                    <i class="fa fa-twitter fa-3x ml-4" aria-hidden="true"></i>
                 </div>
             </div>
         </div>
@@ -83,7 +81,6 @@
             <a href="{{ path('observation') }}" class="text-center btn btn-outline">suivant</a>
         </div>
     </div>
-
 
 
     </div>
