CSS: Page profil (template + tabs + recompenses) + Fix responsivité

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -62,7 +62,7 @@
                 </div>
             {% endif %}
         </nav>
-        <div class="navbar-wing d-flex flex-column align-items-center">
+        <div class="navbar-svg d-flex flex-column align-items-center">
             <svg preserveAspectRatio="none" width="100%" height="80px" viewBox="0 0 375 59" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <desc>Aile</desc>
                 <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -105,7 +105,7 @@
                 <div class="col-12 col-md-8">
                     <div class="input-group align-items-center mb-0">
                         <input type="text" class="form-control" placeholder="Email address">
-                        <a class="input-group-addon text-center" href="#"><span class="fa fa-envelope input-group-icon"></span></a>
+                        <a class="input-group-addon text-center" href="#"><i class="fa fa-envelope input-group-icon"></i></a>
                     </div>
                     <p class="text-muted">Votre email ne sera pas partagé</p>
                 </div>
