--- a/app/Resources/views/main/apropos.html.twig
+++ b/app/Resources/views/main/apropos.html.twig
@@ -19,9 +19,9 @@
 				<h2>qui sommes-nous</h2>
 				<span>Et pourquoi nous défendons la cause ornithologique.</span>
 			</div>
-			<div class=" row media align-items-center justify-content-center p-0">
-				<img class="col-12 col-md-4 rounded mr-md-1 mr-lg-4 p-0" src="{{ asset('bundles/app/img/amethyste.jpg') }}" alt="étourneau améthyste">
-				<div class="media-body col-12 col-md-8">
+			<div class="flex-wrap media align-items-center justify-content-center p-0">
+				<img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{ asset('bundles/app/img/amethyste.jpg') }}" alt="étourneau améthyste">
+				<div class="media-body col-12 col-md-8 px-0">
 					<h3 class="mt-5 mt-md-0 text-center text-md-left">Présentation de l'association</h3>
 					<p class="text-justify">Nos amis les oiseaux (NAO) est une association de protection de l'environnement française fondée en 1983 ayant pour objectif « la protection des oiseaux et des écosystèmes dont ils dépendent et, en particulier, la faune et la flore qui y sont associées ». <br>
 Nos amis les oiseaux est engagée sur l’ensemble du territoire national Français et se mobilise pour la protection de la biodiversité. A travers un réseau de naturalistes professionnels et amateurs qui partagent tous une passion pour les oiseaux et leur environnement naturel, « Nos amis les oiseaux » collecte des données d’observation afin de déterminer l’influence du climat sur la biodiversité. <br>
