--- a/app/Resources/views/main/actualite.html.twig
+++ b/app/Resources/views/main/actualite.html.twig
@@ -24,7 +24,7 @@
 
             <h6 class="text-center mb-4">{{ actualite.updateAt|localizeddate('full', 'none')|upper }}</h6>
             
-            <div class="row media align-items-center justify-content-center p-0">
+            <div class="flex-wrap media align-items-center justify-content-center p-0">
                 <img class="col-12 col-md-4 rounded mr-md-1 mr-lg-4 p-0" src="{{ asset('bundles/app/img/'~actualite.actualiteImage) }}" alt="image d'actualité">
                 <div class="media-body col-12 col-md-8">
                     <h3 class="mt-5 mt-md-0 text-center text-md-left">{{ actualite.title|upper }}</h3>
@@ -40,12 +40,12 @@
     <section id="commentSection">
         <div class="container">
 
-            <div class="row flex-column comm-display flex-nowrap p-0">
+            <div class="flex-wrap flex-column comm-display flex-nowrap p-0">
                 {% for comment in comments %}
-                    <div class="row media align-items-center justify-content-center p-0 mx-3 my-2 comm">
+                    <div class="flex-wrap media align-items-center justify-content-center mx-3 my-2 comm">
                         <div class="col-3 col-sm-4 col-lg-2 mr-3">
                             <div class="row align-items-center justify-content-start">
-                                    <img src="{{ asset('bundles/app/img/'~comment.user.profilePicture) }}" alt="" class="comment-avatar rounded-circle">
+                                <img src="{{ asset('bundles/app/img/'~comment.user.profilePicture) }}" alt="" class="comment-avatar rounded-circle">
                                 <div class="ml-sm-3">
                                     <p class="mb-1">{{ comment.user.username|capitalize }}</p>
                                     <span>{{ comment.updateAt|ago }}</span>
@@ -76,9 +76,9 @@
     </section>
 
     <div class="container">
-        <div class="row justify-content-between align-items-center mt-5">
-            <a href="{{ path('observation') }}" class="text-center btn btn-outline">précédent</a>
-            <a href="{{ path('observation') }}" class="text-center btn btn-outline">suivant</a>
+        <div class="d-flex flex-wrap justify-content-around justify-content-sm-between align-items-center mt-5">
+            <a href="{{ path('observation') }}" class="text-center btn btn-outline my-3 my-sm-0">précédent</a>
+            <a href="{{ path('observation') }}" class="text-center btn btn-outline my-3 my-sm-0">suivant</a>
         </div>
     </div>
 
