--- a/app/Resources/views/main/home.html.twig
+++ b/app/Resources/views/main/home.html.twig
@@ -28,19 +28,19 @@
                 <span>Pour bien commencer votre aventure !</span>
             </div>
 
-            <div class="row media align-items-center justify-content-center">
-                <img class="col-12 col-md-4" src="{{ asset('bundles/app/img/laptop.svg') }}">
-                <div class="media-body col-12 col-md-8">
+            <div class="media flex-wrap align-items-center justify-content-center my-3">
+                <img class="col-12 col-lg-4" src="{{ asset('bundles/app/img/laptop.svg') }}">
+                <div class="media-body col-12 col-lg-8">
                     <h3 class="mt-3 mt-md-0 text-center text-md-left">CRÉER UN COMPTE NAO</h3>
                     <p class="text-justify">Inscrivez-vous sur notre site, connectez-vous et profitez de l'ensemble des fonctionnalités proposées par l'association Nos Amis Les Animaux ! L'aventure comme ici et elle n'attend que vous !</p>
                 </div>
             </div>
 
             <div class="row justify-content-center">
-                <img class="col-sm-8 d-none d-sm-block" src="{{ asset('bundles/app/img/home/path-1.svg') }}" alt="chemin">
+                <img class="col-sm-8 d-none d-md-block" src="{{ asset('bundles/app/img/home/path-1.svg') }}" alt="chemin">
             </div>
 
-            <div class="row media align-items-center justify-content-center">
+            <div class="media flex-wrap align-items-center justify-content-center my-3">
                 <img class="col-12 col-md-4 order-sm-2" src="{{ asset('bundles/app/img/boussole-camera.svg') }}">
                 <div class="media-body col-12 col-md-8 order-sm-1">
                     <h3 class="mt-3 mt-md-0 text-center text-md-left">OBSERVEZ AUTOUR DE VOUS</h3>
@@ -49,10 +49,10 @@
             </div>
             
             <div class="row justify-content-center">
-                <img class="col-sm-8 d-none d-sm-block" src="{{ asset('bundles/app/img/home/path-2.svg') }}" alt="chemin">
+                <img class="col-sm-8 d-none d-md-block" src="{{ asset('bundles/app/img/home/path-2.svg') }}" alt="chemin">
             </div>
 
-            <div class="row media align-items-center justify-content-center">
+            <div class="media flex-wrap align-items-center justify-content-center my-3">
                 <img class="col-12 col-md-4" src="{{ asset('bundles/app/img/notebooks.svg') }}">
                 <div class="media-body col-12 col-md-8">
                     <h3 class="mt-3 mt-md-0 text-center text-md-left">PARTAGEZ VOTRE EXPÉRIENCE</h3>
