--- a/app/Resources/views/main/profile.html.twig
+++ b/app/Resources/views/main/profile.html.twig
@@ -12,6 +12,7 @@
     </div>
     <img class="wave-svg" src="{{ asset('bundles/app/img/template/wave-driedwood.svg') }}" alt="vague" style="width: 100%">
 
+
     <div class="container">
         <ul class="nav nav-tabs align-items-end" id="userTab" role="tablist">
             <li class="text-center col nav-item">
@@ -30,7 +31,10 @@
         </ul>
     </div>
 
+
     <section class="mt-5 tab-content">
+
+        {#RECOMPENSES#}
         <div class="tab-pane active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
             <div class="container">
                 <div class="heading">
@@ -52,6 +56,8 @@
                         <div class="progress">
                             <div class="progress-bar"
                                  style="width: 77%">77%
+
+
                             </div>
                         </div>
                     </div>
@@ -70,6 +76,7 @@
                     <span>Retrouvez vos meilleures captures et vos plus belles rencontres</span>
                 </div>
             </div>
+
         </div>
 
         <div class="tab-pane" id="settings" role="tabpanel" aria-labelledby="settings-tab">
@@ -87,7 +94,6 @@
 
                     <div class="col">
                                 {{ form_start(formChangeEmail) }}
-
                                 {{ form_row(formChangeEmail.email, {
                                     'label' : 'Nouvel email'
                                 }) }}
@@ -98,7 +104,6 @@
                     </div>
                     <div class="col">
                         {{ form_start(formChangePassword) }}
-
                         {{ form_row(formChangePassword.plainPassword.first, {
                             'label' : 'Nouveau mot de passe'
                         }) }}
@@ -214,13 +219,6 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-
-
 
 
 {% endblock %}
